dev/location/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location
  namespace: yas-dev
  labels:
    app: location
spec:
  replicas: 1
  selector:
    matchLabels:
      app: location
  template:
    metadata:
      labels:
        app: location
    spec:
      containers:
      - name: location
        image: ghcr.io/nashtech-garage/yas-location:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
