dev/location/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: location
  namespace: yas-dev
  labels:
    app: location
spec:
  type: ClusterIP
  selector:
    app: location
  ports:
  - port: 80
    targetPort: 80
